--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
     <hr>
 
     <h2>Мои социальные сети</h2>
-    <ul type="square">
-        <li><a href="https://vk.com/evgeniy.gorlanov" target="_blank">vk.com</a></li>
-        <li><a href="https://instagram.com/evgeniy.gorlanov" target="_blank">instagram</a></li>
+    <ul type="circle">
+        <li><a href="https://t.me/sw1zzy1337" target="_blank">Telegram</a></li>
+        <li><a href="https://instagram.com/evgeniy.gorlanov" target="_blank">Instagram</a></li>
 
     </ul>
     <hr>
     <h2>Мои хобби</h2>
     <ol>
-        <li>Играть в компьютерные игры</li>
+        <li>Киберспортсмен</li>
         <li>Изучать программирование</li>
+        <li>Проводить время с друзьями</li>
     </ol>
 
 <h2>Опыт работы</h2>
@@ -47,7 +48,7 @@
             <td>2015-2021</td>
         </tr>
         <tr> 
-            <td>Безработный</td> 
+            <td>Программирование</td> 
             <td>Учусь программированию</td>
             <td>2021-2022</td>
         </tr>
