--- a/steam.html
+++ b/steam.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>
-            <a href="https://steamcommunity.com/">Steam</a>
+            <a href="https://steamcommunity.com/id/-sw1zzy1337/">Мой аккаунт Steam</a>
         </li>
     </ul>
 </body>
