--- a/steam.html
+++ b/steam.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     
-    <title>Steam accounts</title>
+    <title>Мои проекты</title>
 </head>
 <body>
     <ul>
