--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <div class="card bg-yellow">
     <h2>Мои хобби</h2>
     <ol class="list">
-        <li>Киберспортсмен</li>
+        <li>Гулять с Анастасией Алексеевной Лучковой</li>
         <li>Изучать программирование</li>
-        <li>Проводить время с друзьями</li>
+        <li>Спать</li>
     </ol>
 </div>
 
